<resources>
    <string name="app_name">Retail SDK Test App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refund_button_text">Refund</string>
    <string name="test_mode_text">Test mode</string>
    <string name="quickchip_text">Quick Chip</string>
    <string name="skip_aid_text">Skip Ingenico AID</string>
    <string name="card_not_present">Card Not Present</string>
    <string name="card_present">Card Present</string>
    <string name="test_alert">Test Alert</string>
    <string name="initialize">Initialize</string>
    <string name="charge">Charge</string>
    <string name="gratuity">Gratuity:</string>
    <string name="amount">Amount:</string>
    <string name="card_reader">Card Reader</string>
    <string name="cash">Cash</string>
    <string name="check">Check</string>
    <string name="keyin">Keyin</string>
    <string name="token">Token-> env:token</string>
    <string name="environment">Environnment</string>
    <string name="readerNumber">Reader Number</string>
    <string name="accessToken">Access token</string>
    <string name="swRepo">Software Repo</string>
    <string name="or">--OR--</string>
    <string name="compositeToken">stage2d0083:WyJBMTAzLlVoclJTc1UwZmdEb2tkOHRINFJPRlVnTG02Q3FfLUJEaXh5c19fc0VmMVlqbFlRYUxvNlFiZmwyX0ZWMHF6RXouUlRmZlhCM0FQTy1CZ3N0eWp6NGNIbHVLM2swIiwyODgwMCxudWxsLCJTWUlvQ3VWcEJiVm9lU2p6Z1RuRkI4RGFsd28xTHM0Y1lmeUQ0N0s1Znk4MXRpYVdhZDZBelh3MnJVSDNLWTc0VUdjYllJUC1WUGhTWWUxLVd4N0xuM3lyWEIzWGxCT09nV3hZUE90enQ0M3BSNlpiIiwiU0dWeVpWTkVTMUJQVXpwSVpYSmxVMFJMVUU5VCJd</string>
    <string name="sale">Sale</string>
    <string name="auth">Auth</string>


    <!-- Strings related to LoginScreenActivity -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_login">Login</string>
    <string name="title_env">Server:</string>
    <string name="title_emv_sw_repo">EMV Config Repo:</string>
    <string name="mock_country_code">Mock Country Code: </string>
    <string name="invalid_user_credentials">Please enter both the user credentials.</string>
    <string name="title_address_1">Address 1</string>
    <string name="title_address_2">Address 2</string>
    <string name="title_city">City</string>
    <string name="title_state">State</string>
    <string name="title_country">Country</string>
    <string name="title_zip">Zip</string>
    <string name="invalid_login">Invalid Credentials. Please login again..</string>
    <string name="credentials_refreshed">Credentials refreshed..</string>
    <string name="title_app_build_number">Build#</string>
    <string name="title_app_version_number">Version#</string>
    <string name="title_build_information">Build Information</string>

    <!-- Strings related to stage_selection -->
    <string name="update_sw_repo_txt">Update Software Repo</string>
    <string name="update_sw_repo_hint">Software Repo Name</string>
    <string name="update_stage_txt">Select Environment</string>
    <string name="update_stage_hint">stage2pph10</string>
    <string name="update_txt">Update</string>

    <!-- Activity Label Strings -->
    <string name="login_activity_name">Login</string>
    <string name="oauth_login_activity_name">Login</string>
    <string name="stage_select_activity_name">Server Selection</string>


</resources>
