<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".TransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/amount"
            android:id="@+id/amountLabel"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/amountField"
            android:layout_centerHorizontal="true"
            android:textSize="10pt"
            android:text="1.00"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:hint="0.00" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gratuity"
            android:id="@+id/gratuityLabel"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/gratuityField"
            android:layout_centerHorizontal="true"
            android:textSize="10pt"
            android:text="0.00"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:hint="0.00" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charge"
        android:id="@+id/chargeButton"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="12pt"
        android:textStyle="bold"
        android:enabled="false" />
    <RadioGroup
        android:id="@+id/paymentTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale"
            android:id="@+id/sale"
            android:checked="true"
            android:layout_below="@+id/amountField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:id="@+id/auth"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/paymentOptionsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_reader"
            android:id="@+id/cardReader"
            android:checked="true"
            android:layout_below="@+id/amountField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:id="@+id/cash"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:id="@+id/check"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyin"
            android:id="@+id/keyin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RadioGroup>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <EditText
                android:id="@+id/ccNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="4111111111111111"
                android:enabled="false"
                android:inputType="number"/>
            <EditText
                android:id="@+id/cvvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:text="408"
                android:enabled="false"
                android:inputType="number"/>
            <EditText
                android:id="@+id/expText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="092019"
                android:enabled="false"
                android:inputType="number"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtccnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="CC #"/>
            <TextView
                android:id="@+id/txtcvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:text="CVV"/>
            <TextView
                android:id="@+id/txtexp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="MMYYYY"/>
        </TableRow>
    </TableLayout>
    <RadioGroup
        android:id="@+id/optionsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_present"
            android:id="@+id/cardPresent"
            android:checked="true"
            android:layout_below="@+id/amountField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_not_present"
            android:id="@+id/cardNotPresent"
            android:layout_below="@+id/cardPresent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refund_button_text"
        android:id="@+id/refundButton"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="10pt"
        android:textStyle="bold"
        android:enabled="false" />
    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_mode_text"
        android:id="@+id/testModeCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />
    <CheckBox
        android:id="@+id/quickChipCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/quickchip_text" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Starting up..."
        android:id="@+id/statusText"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"/>
</LinearLayout>
</ScrollView>
